--- a/style.css
+++ b/style.css
@@ -310,10 +310,10 @@ nav {
 
 .review{
     display: flex;
-    border: 2px solid black;
+    /* border: 2px solid black; */
     /* height: 40%;
     width: 80%; */
-    font-size: 40px;
+    /* font-size: 40px; */
     flex-direction: column;
     /* padding: 10px; */
     /* width: 100%; */
