--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ nav {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-style: oblique;
     font-weight: 800;
-    font-size: 50px;
+    /* font-size: 50px; */
     /* background-color: aquamarine; */
     margin: 0px;
     padding: 0px;
