--- a/style.css
+++ b/style.css
@@ -148,7 +148,7 @@ nav {
 
 .txt {
     text-align: center;
-    font-size: 60px;
+    /* font-size: 60px; */
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -168,7 +168,7 @@ nav {
     margin-left: 6vw;
     margin-right: 6vw;
     margin-bottom: 2vw;
-    font-size: 30px;
+    /* font-size: 30px; */
 }
 
 .readmore {
